Fixes overflow on slide menu

--- a/src/components/SlideDropdown/styles.module.scss
+++ b/src/components/SlideDropdown/styles.module.scss
@@ -3,7 +3,7 @@
 .SlideDropdown {
   width: 95%;
   height: 0px;
-  // overflow: hidden;
+  overflow: hidden;
   margin: 0 auto;
 
   position: relative;
